fix align bug

--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -122,7 +122,8 @@
     color: #666;
   }
 
-  &.align-right > .dropdown-inner > .sui-dropdown-menu {
+  &.align-right > .dropdown-inner > .sui-dropdown-menu,
+  &.align-right > .sui-dropdown-menu {
     right: 0;
     left: auto;
   }
